# boolean-ir

./: .gitignore  AGENTS.md  README.md  pyproject.toml
boolean_ir/: __init__.py  engine.py  evaluator.py  exceptions.py  index.py  normalizer.py  parser.py  tokenizer.py  types.py
boolean_ir/loaders/: __init__.py  txt_loader.py
boolean_ir/text_processor/: __init__.py  normalizer.py  textProcessor.py
boolean_ir/text_processor/stop_words/: __init__.py  english.py  portuguese.py  spanish.py
tests/: test_edge_cases.py  test_engine.py  test_index.py  test_parser.py  test_txt_loader.py
